# concordia

./: .env.example  .gitignore  .pylintrc  CHANGELOG.md  CHEATSHEET.md  CITATION.bib  CLAUDE.MD  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTION_SUMMARY.md  GETTING_STARTED_WITH_CONTRIBUTION.md  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  UPSTREAM_SYNC.md  create_dummy_results.py  demo_negotiation_framework.py  environment_packages.txt  eval.sh  final_gemma_3_test.py  final_gemma_7b_sim.py  fixed_gemma_3_simulation.py  full_gemma_3_baseline.py  gemma_evolutionary_sim.py  minimal_gemma_3_test.py  pyproject.toml  quick_negotiation_demo.py  requirements.txt  requirements_nolinux.txt  run_negotiation_demo.py  run_negotiation_tests.py  setup.py  test_analysis_vulnerability.py  test_components.py  test_fixed_gemma_3.py  test_gemma_robust.py  test_negotiation_components.py  test_negotiation_integration.py  test_negotiation_scenarios.py  test_negotiation_with_llm.py  (+4 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: dependabot.yml
concordia/: __init__.py  concordia_integration_test.py
data/: 06 13:05 haggling_0 orp_base.html  06 13:48 haggling_0 orp_goal.html  06 14:14 haggling_0 orp_goal.html  06 14:24 haggling_0 orp_goal.html  06 14:35 haggling_0 orp_goal.html  06 14:49 haggling_0 orp_goal.html  07 12:17 state_formation_0 orp_xob.html  10 12:46 haggling_0 orp_xmem.html  13 18:19 haggling_0 orp_double.html  16 18:09 haggling_0 risk_averse_agent.html  16 18:50 state_formation_0 risk_averse_agent.html  16 19:38 state_formation_0 orp_xob.html  17 22:33 haggling_0 risk_averse_agent.html  17 22:49 haggling_0 risk_averse_agent.html  17 22:56 haggling_0 risk_averse_agent.html  17 23:06 haggling_0 orp_base.html  18 00:17 state_formation_0 risk_averse_agent.html  18 00:25 haggling_0 risk_averse_agent.html  18 00:30 haggling_0 risk_averse_agent.html  18 00:35 haggling_0 risk_averse_agent.html  18 00:41 haggling_0 risk_averse_agent.html  18 00:47 haggling_0 risk_averse_agent.html  18 00:52 haggling_0 risk_averse_agent.html  2024-10-19 12:10:22.html  2024-10-20 11:08:34.html  (+23 more)
(+1837 files in other folders)
